--- a/MultiplicationTable.html
+++ b/MultiplicationTable.html
@@ -4,16 +4,16 @@
         <title>SumOfNumber</title>
     </head>
     <body>
-        <h1></h1>
-        <p>Click the button to check To add a number</p>
-        <button onclick="multiTable()">Check Number</button>
+        <h1>generate a Multiplication Table</h1>
+        <p>Click the button to multiply a number</p>
+        <button onclick="multiTable()">Multiply Number</button>
         <p id="result"></p>
     </body>
     <script>
         const multiTable = () => {
             let number = prompt("Enter a number:");
             for (let i = 1; i == 10; i++) {
-                
+                number = number * i
             }
         }
     </script>
