Finished the four tasks

--- a/NumberCompare.html
+++ b/NumberCompare.html
@@ -10,8 +10,8 @@
     </body>
     <script>
         const compare = () => {
-            let number1 = prompt("Enter the first number:");
-            let number2 = prompt("Enter the second number:");
+            let number1 = parseInt(prompt("Enter the first number:"));
+            let number2 = parseInt(prompt("Enter the second number:"));
             if (number1 > number2) {
                 alert(number1 + " is the larger number")
             }
