--- a/EvenOddChecker.html
+++ b/EvenOddChecker.html
@@ -10,7 +10,7 @@
         <p id="result"></p>
     </body>
     <script>
-        function checkEvenOdd() {
+        const checkEvenOdd = () => {
             let number = prompt("Enter a number:");
             if (number % 2 == 0) {
                 alert(number + " is even.");
