--- a/MultiplicationTable.html
+++ b/MultiplicationTable.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SumOfNumber</title>
+        <title>MultiplicationTable</title>
     </head>
     <body>
         <h1>generate a Multiplication Table</h1>
         <p>Click the button to multiply a number</p>
         <button onclick="multiTable()">Multiply Number</button>
-        <p id="result"></p>
+        <div id="result"></div>
     </body>
     <script>
         const multiTable = () => {
-            let number = prompt("Enter a number:");
-            for (let i = 1; i == 10; i++) {
-                number = number * i
+            let number = parseInt(prompt("Enter a number:"));
+            let resultDiv = document.getElementById("result");
+            resultDiv.innerHTML = "";
+            for (let i = 1; i <= 10; i++) {
+                resultDiv.innerHTML += `${number} x ${i} = ${number * i}<br>`;
             }
         }
     </script>
