made a Positive numbers filter

--- a/JSP2/PracticeJS2.html
+++ b/JSP2/PracticeJS2.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Basic JavaScript practice - II</h1>
         <button onclick="arrayReverser()">ReverseArray</button>
-        <button onclick=""></button>
+        <button onclick="positiveFilter()">GetPositives</button>
         <button onclick=""></button>
         <button onclick=""></button>
         <button onclick=""></button>
