Made an array sum function

--- a/JSP2/PracticeJS2.html
+++ b/JSP2/PracticeJS2.html
@@ -8,7 +8,7 @@
         <h1>Basic JavaScript practice - II</h1>
         <button onclick="arrayReverser()">ReverseArray</button>
         <button onclick="positiveFilter()">GetPositives</button>
-        <button onclick=""></button>
+        <button onclick="arraySum()">SumArray</button>
         <button onclick=""></button>
         <button onclick=""></button>
     </body>
