Finished the task by making a word counting function

--- a/JSP2/PracticeJS2.html
+++ b/JSP2/PracticeJS2.html
@@ -9,7 +9,6 @@
         <button onclick="arrayReverser()">ReverseArray</button>
         <button onclick="positiveFilter()">GetPositives</button>
         <button onclick="arraySum()">SumArray</button>
-        <button onclick=""></button>
-        <button onclick=""></button>
+        <button onclick="wordCounter()">CountWords</button>
     </body>
 </html>
