--- a/CallbacksPractice/CallbackPractice.html
+++ b/CallbacksPractice/CallbackPractice.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Below Are buttons to call callback functions</h1>
-        <button onclick="greet(haroon)"></button>
+        <button onclick="greet(haroon)">GreetInConsole</button>
+        <button onclick="calculate(3, 'add', 5)">CalcInConsole</button>
     </body>
 </html>
