--- a/CallbacksPractice/CallbackPractice.html
+++ b/CallbacksPractice/CallbackPractice.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1>Below Are buttons to call callback functions</h1>
-        <button onclick="greet(haroon)">GreetInConsole</button>
+        <button onclick="greet('Haroon',greetName)">GreetInConsole</button>
         <button onclick="calculate(3, 'add', 5)">CalcInConsole</button>
+        <button onclick="processArray([1,2,3],doublingNums)">ProcessInConsole</button>
     </body>
 </html>
