--- a/CallbacksPractice/CallbackPractice.html
+++ b/CallbacksPractice/CallbackPractice.html
@@ -9,5 +9,6 @@
         <button onclick="greet('Haroon',greetName)">GreetInConsole</button>
         <button onclick="calculate(3, 'add', 5)">CalcInConsole</button>
         <button onclick="processArray([1,2,3],doublingNums)">ProcessInConsole</button>
+        <button onclick="getData(()=>dataFun('This is some good data'))">GetDataInConsole</button>
     </body>
 </html>
