Finished the nested callbacks task

--- a/CallbacksPractice/CallbackPractice.html
+++ b/CallbacksPractice/CallbackPractice.html
@@ -10,5 +10,6 @@
         <button onclick="calculate(3, 'add', 5)">CalcInConsole</button>
         <button onclick="processArray([1,2,3],doublingNums)">ProcessInConsole</button>
         <button onclick="getData(()=>dataFun('This is some good data'))">GetDataInConsole</button>
+        <button onclick="login(()=>fetchUser(()=>fetchSettings()))">LoginConsole</button>
     </body>
 </html>
