Finished Callback Error handling

--- a/CallbacksPractice/CallbackPractice.html
+++ b/CallbacksPractice/CallbackPractice.html
@@ -11,5 +11,6 @@
         <button onclick="processArray([1,2,3],doublingNums)">ProcessInConsole</button>
         <button onclick="getData(()=>dataFun('This is some good data'))">GetDataInConsole</button>
         <button onclick="login(()=>fetchUser(()=>fetchSettings()))">LoginConsole</button>
+        <button onclick="divide(4,0,correctDivision,errorDivision)">DivideInConsole</button>
     </body>
 </html>
