Finished hideShow function

--- a/DOMManipulationPractice/DOMMani1.html
+++ b/DOMManipulationPractice/DOMMani1.html
@@ -7,10 +7,11 @@
     <body>
         <h1 id="Myh1">DOM Manipulation Practice I</h1>
         <div>
-            <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit a eos adipisci architecto, laboriosam ut delectus quae dolorum explicabo fugiat quod excepturi pariatur, eveniet accusantium beatae dolores quaerat dolore sapiente.</P>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit a eos adipisci architecto, laboriosam ut delectus quae dolorum explicabo fugiat quod excepturi pariatur, eveniet accusantium beatae dolores quaerat dolore sapiente.</p>
             <ul></ul>
         </div>
         <button onclick="changeHeading()">ChangeH1</button>
         <button onclick="changeDivBC()">ChangeDivBC</button>
+        <button onclick="hideShow()">HideShow</button>
     </body>
 </html>
