finished first DOM practice

--- a/DOMManipulationPractice/DOMMani1.html
+++ b/DOMManipulationPractice/DOMMani1.html
@@ -9,9 +9,12 @@
         <div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit a eos adipisci architecto, laboriosam ut delectus quae dolorum explicabo fugiat quod excepturi pariatur, eveniet accusantium beatae dolores quaerat dolore sapiente.</p>
             <ul></ul>
+
         </div>
         <button onclick="changeHeading()">ChangeH1</button>
         <button onclick="changeDivBC()">ChangeDivBC</button>
         <button onclick="hideShow()">HideShow</button>
+        <button onclick="addIntoULList()">AddListItem</button>
+        <button onclick="removeElement()">RemoveElement</button>
     </body>
 </html>
