made a change button function

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -8,8 +8,10 @@
         <h1>Lions and Hair</h1>
         <div>
             <p>Below is a lion. Lions are the kings of the savanna, and they have a beard and hair that is called a mane.</p>
-            <img src="lion.jpg">
+            <img src="lion.jpg" alt="There was supposed to be a lion here">
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
+        <button onclick="changeAlt()">ChangeAlt</button>
+        <button id="chB" onclick="changeMe()">ChangeMe</button>
     </body>
 </html>
