added a paragraph resize function

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -7,11 +7,12 @@
     <body>
         <h1>Lions and Hair</h1>
         <div>
-            <p>Below is a lion. Lions are the kings of the savanna, and they have a beard and hair that is called a mane.</p>
+            <p style="font-size: 14px;">Below is a lion. Lions are the kings of the savanna, and they have a beard and hair that is called a mane.</p>
             <img src="lion.jpg" alt="There was supposed to be a lion here">
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
         <button onclick="changeAlt()">ChangeAlt</button>
-        <button id="chB" onclick="changeMe()">ChangeMe</button>
+        <button id="chB" onclick="changeMe()">Click Me</button>
+        <button onclick="pResize()">ResizeText</button>
     </body>
 </html>
