added a click counter

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -9,10 +9,12 @@
         <div>
             <p style="font-size: 14px;">Below is a lion. Lions are the kings of the savanna, and they have a beard and hair that is called a mane.</p>
             <img src="lion.jpg" alt="There was supposed to be a lion here">
+            <p id="LLV">You love lions this much: 0</p>
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
         <button onclick="changeAlt()">ChangeAlt</button>
         <button id="chB" onclick="changeMe()">Click Me</button>
         <button onclick="pResize()">ResizeText</button>
+        <button id = "cc" onclick="clickCounter()">ClickForLion</button>
     </body>
 </html>
