--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -16,5 +16,6 @@
         <button id="chB" onclick="changeMe()">Click Me</button>
         <button onclick="pResize()">ResizeText</button>
         <button id = "cc" onclick="clickCounter()">ClickForLion</button>
+        <button id ="DB" onclick="disableButton()">DontKillMe</button>
     </body>
 </html>
