added a displayButton function

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -10,7 +10,7 @@
             <p style="font-size: 14px;">Below is a lion. Lions are the kings of the savanna, and they have a beard and hair that is called a mane.</p>
             <img src="lion.jpg" alt="There was supposed to be a lion here">
             <p id="LLV">You love lions this much: 0</p>
-            <input onblur="inputBorderColor()" placeholder="Write about your love for Lions">
+            <input id="LVtext" onblur="inputBorderColor()" placeholder="Write about your love for Lions" ><button onclick="displayText()" id="submitLV">Sumbit</button>
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
         <button onclick="changeAlt()">ChangeAlt</button>
