backgroun color changer function was added

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -10,6 +10,10 @@
             <p style="font-size: 14px;">Below is a lion. Lions are the kings of the savanna, and they have a beard and hair that is called a mane.</p>
             <img src="lion.jpg" alt="There was supposed to be a lion here">
             <p id="LLV">You love lions this much: 0</p>
+            <ol>Things to beware of in a lion:
+                <li>the teeth</li>
+                <li>The claws</li>
+            </ol>
             <input id="LVtext" onblur="inputBorderColor()" placeholder="Write about your love for Lions" ><button onclick="displayText()" id="submitLV">Sumbit</button>
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
@@ -18,5 +22,6 @@
         <button onclick="pResize()">ResizeText</button>
         <button id = "cc" onclick="clickCounter()">ClickForLion</button>
         <button id ="DB" onclick="disableButton()">DontKillMe</button>
+        <button onclick="backgroundColorChanger()">ChangeBackgroun</button>
     </body>
 </html>
