finished highlight text function

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -11,8 +11,8 @@
             <img src="lion.jpg" alt="There was supposed to be a lion here">
             <p id="LLV">You love lions this much: 0</p>
             <ol>Things to beware of in a lion:
-                <li>the teeth</li>
-                <li>The claws</li>
+                <li id="ilt" onclick="ilCC('ilt')">the teeth</li>
+                <li id="ilc" onclick="ilCC('ilc')">The claws</li>
             </ol>
             <input id="LVtext" onblur="inputBorderColor()" placeholder="Write about your love for Lions" ><button onclick="displayText()" id="submitLV">Sumbit</button>
         </div>
