--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -15,7 +15,7 @@
                 <li id="ilc" onclick="ilCC('ilc')">The claws</li>
             </ol>
             <input id="LVtext" onblur="inputBorderColor()" placeholder="Write about your love for Lions" ><button onclick="displayText()" id="submitLV">Sumbit</button>
-            <input id="secret" placeholder="Tell a secret to a lion" type="password"><input type="checkbox" onclick="clickBoxShow()" style="border: black;">click to show
+            <input id="secret" placeholder="Tell a secret to a lion" type="password"><input type="checkbox" onclick="clickBoxShow()" style="border: black;">click to show<!--Already did task 12 before even seeing it-->
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
         <button onclick="changeAlt()">ChangeAlt</button>
