--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -16,6 +16,8 @@
             </ol>
             <input id="LVtext" onblur="inputBorderColor()" placeholder="Write about your love for Lions" ><button onclick="displayText()" id="submitLV">Sumbit</button>
             <input id="secret" placeholder="Tell a secret to a lion" type="password"><input type="checkbox" onclick="clickBoxShow()" style="border: black;">click to show<!--Already did task 12 before even seeing it-->
+            <input id="scream" placeholder="shout about lions"><button onclick="scream()">SCREAM</button>
+            <p id="screamed"></p>
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
         <button onclick="changeAlt()">ChangeAlt</button>
