Finished a function that changes color through color input tag

--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -17,6 +17,7 @@
             <input id="LVtext" onblur="inputBorderColor()" placeholder="Write about your love for Lions" ><button onclick="displayText()" id="submitLV">Sumbit</button>
             <input id="secret" placeholder="Tell a secret to a lion" type="password"><input type="checkbox" onclick="clickBoxShow()" style="border: black;">click to show<!--Already did task 12 before even seeing it-->
             <input id="scream" placeholder="shout about lions"><button onclick="scream()">SCREAM</button>
+            <input id="help" type="color" onclick="changeThroughC()">
             <p id="screamed"></p>
         </div>
         <button onclick="changeTitle()">ChangeTitle</button>
