--- a/DOMManipulationPractice/DOMMani2.html
+++ b/DOMManipulationPractice/DOMMani2.html
@@ -27,5 +27,6 @@
         <button id = "cc" onclick="clickCounter()">ClickForLion</button>
         <button id ="DB" onclick="disableButton()">DontKillMe</button>
         <button onclick="backgroundColorChanger()">ChangeBackgroun</button>
+        <button onclick="resetSection()">Reset A section</button>
     </body>
 </html>
