--- a/Test.html
+++ b/Test.html
@@ -7,7 +7,6 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <h1>Welcome to My Page</h1>
-        <p>This is a basic HTML template.</p>
+        <div id="container"></div>
     </body>
 </html>
