added a button to fetch posts

--- a/JSFetch()&DOM_Practice/fetch()&DOMPractice.html
+++ b/JSFetch()&DOM_Practice/fetch()&DOMPractice.html
@@ -6,7 +6,15 @@
     </head>
     <body>
         <div id="container">
-                <button onclick="getUserData()">Load Users</button>
+            <button onclick="getUserData()">Load Users</button>
+        </div>
+        <div id="container2">
+            <button onclick="getPosts()">Load Posts</button> 
+        </div>
+        <div id="form">
+            <input placeholder="Add Title" style="display: block;">
+            <textarea placeholder="Add text" style="display: block;"></textarea>
+            <button onclick="" style="display: block;">Submit</button>
         </div>
     </body>
 </htm>
