added a load comments function

--- a/JSFetch()&DOM_Practice/fetch()&DOMPractice.html
+++ b/JSFetch()&DOM_Practice/fetch()&DOMPractice.html
@@ -17,7 +17,7 @@
             <button onclick="postText()" style="display: block;">Submit</button>
         </div>
         <div id="loadComments">
-            <input id="postID" placeholder="Post ID"><button onclick="">Load Comments</button>
+            <input id="postID" placeholder="Post ID"><button onclick="loadComments()">Load Comments</button>
         </div>
     </body>
 </htm>
